<resources>
    <string name="app_name">Doggos</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_in">Sign in</string>
    <string name="user_name">User Name</string>
    <string name="husky">Husky</string>
    <string name="hound">Hound</string>
    <string name="pug">Pug</string>
    <string name="labrador">Labrador</string>
    <string name="sign_off">Sign off</string>
</resources>
